Upgrade to Java v11